# ai-assistant

./: .env.example  .gitignore  Dockerfile  README.md  design.html  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup_local.sh
agent/: __init__.py  bm25_retriever.py  bot.py  config.py  context_manager.py  csv_ingestion.py  database.py  embedder.py  ingestion.py  llm.py  memory.py  metrics.py  models.py  retriever.py  scheduler.py  tools.py  vector_store.py
monitoring/: prometheus.yml
tests/: test_context_manager.py  test_csv_ingestion.py  test_ingestion.py  test_llm.py  test_memory.py  test_retriever.py  test_tools.py
